[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/Bullets/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://VFX/MuzzleFlash.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Guns/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/GunController.gd" type="Script" id=4]
[ext_resource path="res://Items/Guns/Gun.gd" type="Script" id=5]

[node name="GunController" type="Node2D"]
script = ExtResource( 4 )
Bullet = ExtResource( 1 )
MuzzleFlash = ExtResource( 2 )

[node name="Gun" parent="." instance=ExtResource( 3 )]
position = Vector2( 48.8726, 0.420921 )
script = ExtResource( 5 )

[node name="Nozzle" type="Position2D" parent="."]
position = Vector2( 56.8726, 0.420921 )

[node name="Timer" type="Timer" parent="."]

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
